# your-personal-agent

./: .env.example  .gitignore  .qagent.json  .qagent.json.example  README.md  pyproject.toml
deploy/: IOS_SHORTCUTS.md  PHONE_ACCESS.md  TELEGRAM_SETUP.md  contacts.example.json  start-agent.sh
deploy/shortcuts/: calendar.md  call.md  sms.md  telegram.md
src/qagent/: agent.py  bot.py  cli.py  config.py  intents.py  ollama.py  parsing.py  server.py  tools.py  voice.py
src/qagent/providers/: __init__.py  base.py  ollama_provider.py  openai_compat.py
src/qagent/skills/: __init__.py  calendar.py  documents.py  drafts.py  email_send.py  notes.py  presentations.py  telegram.py  web.py
src/qagent/web/: index.html
