[project]
name = "qwen-agent-cli"
version = "0.1.0"
description = "Local Qwen2.5 agent CLI powered by Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
qagent = "qagent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
