[project]
name = "qwen-agent-cli"
version = "0.2.0"
description = "Personal local agent with Qwen2.5 (Ollama): files, web, drafts, slides, voice, Telegram"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
slides = ["python-pptx>=0.6"]
voice = [
  "sounddevice>=0.4",
  "numpy>=1.24",
  "faster-whisper>=1.0",
  "edge-tts>=6.1",
  "simpleaudio>=1.0; platform_system != 'Windows'",
]
all = [
  "python-pptx>=0.6",
  "sounddevice>=0.4",
  "numpy>=1.24",
  "faster-whisper>=1.0",
  "edge-tts>=6.1",
  "simpleaudio>=1.0; platform_system != 'Windows'",
]

[project.scripts]
qagent = "qagent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
