[project]
name = "your-personal-agent"
version = "0.3.0"
description = "Your personal Agent is here! A local AI assistant (Qwen / OpenAI-compat) reachable from laptop and phone."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
docs = ["python-docx>=1.1", "python-pptx>=0.6"]
voice = [
  "sounddevice>=0.4",
  "numpy>=1.24",
  "faster-whisper>=1.0",
  "edge-tts>=6.1",
  "simpleaudio>=1.0; platform_system != 'Windows'",
]
all = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-docx>=1.1",
  "python-pptx>=0.6",
  "sounddevice>=0.4",
  "numpy>=1.24",
  "faster-whisper>=1.0",
  "edge-tts>=6.1",
  "simpleaudio>=1.0; platform_system != 'Windows'",
]

[project.scripts]
qagent = "qagent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qagent = ["web/*"]
